[package]
name = "ddns4cf"
version = "0.1.0"
edition = "2021"
authors = ["Magic Crazy Man"]
description = "Dynamic Domain Naming Service for Cloudflare"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json5 = "0.4.1"
clap = "2.34.0"
serde = { version = "1.0.132", features = ["serde_derive"] }
scraper = "0.12.0"
reqwest = { version = "0.11.7", features = ["socks", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
log = "0.4.17"
fern = "0.6.1"
async-trait = "0.1.58"
futures = "0.3.25"
