[package]
name = "ddns4cf"
version = "0.1.1"
edition = "2021"
authors = ["Magic Crazy Man"]
description = "Dynamic Domain Naming Service for Cloudflare"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json5 = "0.4.1"
clap = "2.34.0"
serde = { version = "1.0.132", features = ["serde_derive"] }
scraper = "0.12.0"
reqwest = { version = "0.11.7", features = ["socks", "rustls-tls"] }
tokio = { version = "1", features = ["full", "io-util", "mio"] }
chrono = "0.4.19"
log = { version = "0.4.17", features = ["serde"] }
fern = { version = "0.6.1" }
async-trait = "0.1.58"
futures = "0.3.25"
regex = "1.9.5"
smallvec = { version = "1.13.2", features = ["serde"] }
serde_json = "1.0.117"
simd-json = "0.13.10"

[profile.release]
opt-level = 3
